Update cart totals table condition and fix spacing issue.

--- a/src/css/view/woo-cart.scss
+++ b/src/css/view/woo-cart.scss
@@ -270,11 +270,14 @@ $white: #fff;
                             }
                         }
                     }
+
+                    + .wc-proceed-to-checkout {
+                        margin-top: 13px;
+                    }
                 }
 
                 .wc-proceed-to-checkout {
                     padding: 0;
-                    margin-top: 13px;
 
                     a.button {
                         font-size: 20px;
